--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,11 @@ transformers==4.27.4
 flask==2.2.3
 requests==2.28.2
 python-dotenv==1.0.0
+Cython==0.29.34
+numpy==1.24.2
+openai==0.27.4
+requests==2.28.2
+setuptools==67.6.1
+tokenizers==0.13.3
+wheel==0.40.0
+
